--- a/mp08/p13/index.html
+++ b/mp08/p13/index.html
@@ -94,6 +94,7 @@
 
 &lt;/FrameLayout&gt;</code></pre>
 <p><code>layout/viewholder_post.xml</code></p>
+<p class="image-container"><img style="width: 727.00px" src="img\759063b9ac88babf.png"></p>
 <pre><code>&lt;?xml version=&#34;1.0&#34; encoding=&#34;utf-8&#34;?&gt;
 &lt;androidx.cardview.widget.CardView
    xmlns:android=&#34;http://schemas.android.com/apk/res/android&#34;
