--- a/xms/index2.html
+++ b/xms/index2.html
@@ -11,28 +11,37 @@
     .wrapper {
         height: 100%;
         display: grid;
-        grid-template-areas: "s1 s1 s1" "s2 s3 s5" "s2 s4 s4";
         grid-template-columns: 10rem 6fr 10rem;
         grid-template-rows: 4rem 1fr 4rem;
     }
     .section1 {
         grid-area: s1;
+        grid-column: 1/4;
+        grid-row: 1/2;
         background-color: #F44336;
     }
     .section2 {
         grid-area: s2;
+        grid-column: 1/2;
+        grid-row: 2/4; 
         background-color: #4CAF50;
     }
     .section3 {
         grid-area: s3;
+        grid-column: 2/3;
+        grid-row: 2/3;
         background-color: #FFEB3B;
     }
     .section4 {
         grid-area: s4;
+        grid-column: 2/4;
+        grid-row: 3/4;
         background-color: #2196F3;
     }
     .section5 {
         grid-area: s5;
+        grid-column: 3/4;
+        grid-row: 2/3;
         background-color: #9C27B0;
     }
 </style>
